tests/ui/parser/impl-item-fn-no-body-semantic-fail.rs
fn main() {}

struct X;

impl X {
    fn f(); //~ ERROR associated function in `impl` without body
}
